--- a/composer.json
+++ b/composer.json
@@ -30,15 +30,15 @@
         "composer/composer":                "^1.5",
         "j13k/yaml-lint":                   "^1.1",
         "jakub-onderka/php-parallel-lint":  "^1.0",
-        "phpmd/phpmd":                      "^2.6",
-        "phpro/grumphp":                    "^0.14",
+        "phpmd/phpmd":                      "~2.7",
+        "phpro/grumphp":                    "~0.17",
         "sclable/xml-lint":                 "^0.2.4",
         "sebastian/phpcpd":                 ">3.0",
         "seld/jsonlint":                    "^1.7",
         "sensiolabs/security-checker":      "^4.1",
         "squizlabs/php_codesniffer":        "^3.2",
         "friendsofphp/php-cs-fixer":        ">2.10",         
-        "phpstan/phpstan-shim":             "~0.11",
+        "phpstan/phpstan":                  "~0.11",
         "phpstan/phpstan-phpunit":          "~0.11"        
     },
     
