--- a/.travis.yml
+++ b/.travis.yml
@@ -104,17 +104,15 @@ before_script:
 script: 
     
     # Move to Dolibarr Sources Dir
-    - cd "$DOL_BUILD_DIR/htdocs/custom/splash"    
+    - cd "$DOL_BUILD_DIR/htdocs/custom"
+    - ls -l $DOL_BUILD_DIR/htdocs/custom/splash/vendor/bin
     
     # Run Grump Main Test Sequence
-    - php vendor/bin/grumphp run --testsuite=travis
+    - php ./splashvendor/bin/grumphp run --testsuite=travis
     # With PHP > 7.1 => Execute CsFixer
-    - if [[ ${TRAVIS_PHP_VERSION:0:3} > "7.1" ]]; then php vendor/bin/grumphp run --testsuite=csfixer; fi    
+    - if [[ ${TRAVIS_PHP_VERSION:0:3} > "7.1" ]]; then php ./splash/vendor/bin/grumphp run --testsuite=csfixer; fi    
     # With PHP > 7.1 => Execute Phpstan 
-    - if [[ ${TRAVIS_PHP_VERSION:0:3} > "7.1" ]]; then php vendor/bin/grumphp run --testsuite=phpstan; fi      
-
-    # Move to Dolibarr Root Dir
-    - cd "$DOL_BUILD_DIR/htdocs/custom"
+    - if [[ ${TRAVIS_PHP_VERSION:0:3} > "7.1" ]]; then php ./splashvendor/bin/grumphp run --testsuite=phpstan; fi      
     
     # Execute Bootstrap file    
     - php travis/bootstrap.php
