WIP: Tests on Dolibarr V11

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,30 +25,30 @@ matrix:
 #          env: DOL=develop DATA=11.0.0    
 
         # Dolibarr V11.0 Branch       
-        - php: 7.3
-          env: DOL=11.0 DATA=11.0.0    
+#        - php: 7.3
+#          env: DOL=11.0 DATA=11.0.0    
         - php: 7.1
           env: DOL=11.0 DATA=11.0.0  
           
-#        # Dolibarr V10.0 Branch       
+        # Dolibarr V10.0 Branch       
 #        - php: 7.3
 #          env: DOL=10.0 DATA=10.0.0    
-#        - php: 7.1
-#          env: DOL=10.0 DATA=10.0.0    
-#
-#        # Dolibarr V9.0 Branch       
+        - php: 7.1
+          env: DOL=10.0 DATA=10.0.0    
+
+        # Dolibarr V9.0 Branch       
 #        - php: 7.2
 #          env: DOL=9.0 DATA=9.0.0
-#        - php: 7.1
-#          env: DOL=9.0 DATA=9.0.0     
-#
-#        # Dolibarr V8.0 Branch       
-#        - php: 7.1
-#          env: DOL=8.0 DATA=7.0.0     
-#        
-#        # Dolibarr V7.0 Branch       
-#        - php: 7.1
-#          env: DOL=7.0 DATA=7.0.0      
+        - php: 7.1
+          env: DOL=9.0 DATA=9.0.0     
+
+        # Dolibarr V8.0 Branch       
+        - php: 7.1
+          env: DOL=8.0 DATA=7.0.0     
+        
+        # Dolibarr V7.0 Branch       
+        - php: 7.1
+          env: DOL=7.0 DATA=7.0.0      
           
     allow_failures:
         - env: DOL=develop DATA=11.0.0 
