--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,8 @@ matrix:
 #          env: DOL=develop DATA=11.0.0    
 
         # Dolibarr V11.0 Branch       
-#        - php: 7.3
-#          env: DOL=11.0 DATA=11.0.0    
+        - php: 7.3
+          env: DOL=11.0 DATA=11.0.0    
         - php: 7.1
           env: DOL=11.0 DATA=11.0.0  
           
