--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@
 # 172.100.0.10        v10.dolibarr.local
 # 172.100.0.11        v11.dolibarr.local
 # 172.100.0.99        latest.dolibarr.local
-# 172.100.0.100       toolkit.wordpress.local
+# 172.100.0.100       toolkit.dolibarr.local
 #
 ################################################################################
 
