--- a/travis/phpstan.neon
+++ b/travis/phpstan.neon
@@ -33,3 +33,6 @@ parameters:
 
         # Fix for Dolibar V11
         - '#Method ProductCombination::updateProperties\(\) invoked with 2 parameters, 1 required#'
+
+        # Fix for Dolibar V12
+        - '#Method ProductAttributeValue::delete\(\) invoked with 1 parameters, 0 required#'
