--- a/travis/phpstan.neon
+++ b/travis/phpstan.neon
@@ -31,9 +31,9 @@ parameters:
         - '#Parameter \#2 \$type_contact of method CommonObject\:\:add_contact\(\) expects int\, string given.#'
         - '#Parameter \#2 \$mode of method Propal\:\:load_board\(\) expects int\, string given.#'
 
-        # Fix for Dolibar V11
+        # Fix for Dolibarr V11
         - '#Method ProductCombination::updateProperties\(\) invoked with 2 parameters, 1 required#'
 
-        # Fix for Dolibar V12
+        # Fix for Dolibarr V12
         - '#Method ProductAttributeValue::delete\(\) invoked with 1 parameter, 0 required#'
         - '#Method Adherent::load_board\(\) invoked with 2 parameters, 1 required#'
