FIX: Product Fetch Before Delete

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,26 +22,24 @@ matrix:
         # Dolibarr Develop Branch       
         - php: 7.4
           env: DOL=develop DATA=12.0.0
+
+#      # Dolibarr V12.0 Branch
+#        - php: 7.3
+#          env: DOL=12.0 DATA=12.0.0
 #        - php: 7.1
-#          env: DOL=develop DATA=11.0.0    
-
-      # Dolibarr V12.0 Branch
-        - php: 7.3
-          env: DOL=12.0 DATA=12.0.0
-        - php: 7.1
-          env: DOL=12.0 DATA=12.0.0
-
-        # Dolibarr V11.0 Branch
-        - php: 7.3
-          env: DOL=11.0 DATA=11.0.0
-
-        # Dolibarr V9.0 Branch
-        - php: 7.1
-          env: DOL=9.0 DATA=9.0.0
-
-        # Dolibarr V7.0 Branch
-        - php: 7.1
-          env: DOL=7.0 DATA=7.0.0
+#          env: DOL=12.0 DATA=12.0.0
+#
+#        # Dolibarr V11.0 Branch
+#        - php: 7.3
+#          env: DOL=11.0 DATA=11.0.0
+#
+#        # Dolibarr V9.0 Branch
+#        - php: 7.1
+#          env: DOL=9.0 DATA=9.0.0
+#
+#        # Dolibarr V7.0 Branch
+#        - php: 7.1
+#          env: DOL=7.0 DATA=7.0.0
           
     allow_failures:
         - env: DOL=develop DATA=12.0.0
